<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/b7"
    tools:context="com.example.memory.GameActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"



        >



        <GridView
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:numColumns="4"
            android:id="@+id/gridView"
            android:layout_weight="10"

            >


        </GridView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"

            android:layout_alignBottom="@id/gridView">


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"

                android:id="@+id/layoutPlayer1"
                android:layout_weight="1">



                <TextView
                    android:text="@string/plyr1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/player1"
                    android:textSize="24dp"

                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_gravity="center"
                    />

                <TextView
                    android:text="0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/scoresPlr1"
                    android:textColor="#b61fca"
                    android:textStyle="bold"
                    android:textSize="39dp"
                    android:gravity="center"
                    android:layout_gravity="center"

                     />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="@string/new_game"
                    android:id="@+id/startNewGame"
                    android:layout_weight="4"
                    android:textSize="10dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:onClick="startNewGame"
                    android:layout_centerHorizontal="true"/>



                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5"
                    android:gravity="center"
                    >


                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        app:srcCompat="@drawable/right"
                        android:visibility="invisible"
                        android:id="@+id/right" />

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        app:srcCompat="@drawable/left"
                        android:id="@+id/left"
                       />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_weight="1">



                <TextView
                    android:text="@string/plyr2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="23dp"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:gravity="center"

                    android:id="@+id/player2" />

                <TextView
                    android:text="0"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="39dp"
                    android:textColor="#b61fca"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:id="@+id/scoresPlr2" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>




</LinearLayout>
